--- a/Cabbages.rmd
+++ b/Cabbages.rmd
@@ -11,6 +11,10 @@ output:
 require(tidyverse)
 require(tigerstats)
 require(MASS)
+# Load required libraries
+library(ggplot2)
+library(dplyr)
+
 veggy <- cabbages
 ```
 
@@ -29,6 +33,12 @@ $H_A$: There is a difference in the vitamin C content of cabbages based on culti
 
 <!--Decide on your methods:  use "variable analysis" or other appropriate descriptors.  Make sure to choose at least one graphical method and at least one numerical method.!-->
 
+Vitamin C content is a numerical variable, cultivation method is a categorical variable. 
+
+```{r}
+data = veggy
+```
+
 # Results
 
 <!--Divide this section into two sub-sections:  One for your descriptive  results and one for your inferential results.!-->
@@ -39,13 +49,46 @@ $H_A$: There is a difference in the vitamin C content of cabbages based on culti
 
 <!--Graphical results here.  Make sure to show your code.  Provide appropriate labels for axes, giving units if possible, and provide a good title for the graph, too.  Use the graphical results to describe the patterns if any that exist in the data as focused toward the research question!-->
 
+```{r}
+# Create a box plot
+ggplot(data, aes(x = Cult, y = VitC)) +
+  geom_boxplot() +
+  labs(title = "Box Plot of VitC by Cult",
+       x = "Cult",
+       y = "VitC")
+
+```
+
+
 ### Numerical Descriptive Results
 
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
 
+```{r}
+# Calculate summary statistics
+summary_stats <- data %>%
+  group_by(Cult) %>%
+  summarise(
+    Mean = mean(VitC),
+    Median = median(VitC),
+    SD = sd(VitC),
+  )
+
+summary_stats
+
+```
+
+
 ## Inferential Results
 
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
+
+```{r}
+# Perform ANOVA to test for group differences 
+anova_result <- aov(VitC ~ Cult, data = data)
+summary(anova_result)
+
+```
 
 
 # Discussion and Conclusion
